# graphiti-poc

./: .gitignore  CONFIGURATION.md  GRAPHITI_API_README.md  README.md  config.py  diagnose_graph_changes.py  knowledge_graph_builder.py  knowledge_graph_searcher.py  langchain_mcp_client.py  llm_graphiti_manager.py  log_config.py  main.py  main2.py  mcp_client_manager.py  neo4j_connector.py  ollama_graphiti_manager.py  pyproject.toml
api/: dependencies.py  frontend.py  main.py
api/models/: requests.py  responses.py
api/routers/: episodes.py
docs/: API_SPEC.md  API_USAGE.md
src/frontend/: COMPLETION_REPORT.md  PROJECT_SUMMARY.md  README.md  tailwind.config.js
src/frontend/config/: settings.py
src/frontend/docs/: implementation-plan.md  internationalization.md  layout-system.md  system-design.md
src/frontend/locales/: zh-CN.json
src/frontend/static/css/: components.css  dashboard.css  input.css  layout.css  tailwind.css  themes.css
src/frontend/static/js/: api.js  app.js  i18n.js  theme.js
src/frontend/static/locales/: zh-CN.json
src/frontend/templates/: base.html  base_new.html
src/frontend/templates/components/: footer.html  header.html  header_new.html  sidebar.html  sidebar_enhanced.html  sidebar_simplified.html
src/frontend/templates/pages/: add-knowledge.html  dashboard.html  search.html
tests/: manual_test.py  neo4j_queries.md  test_api.py  test_api_complete.py  test_llm_connection.py
